Created base repo, made first migrations

--- a/Foodify/Foodify.Infrastructures/Foodify.Infrastructures.csproj
+++ b/Foodify/Foodify.Infrastructures/Foodify.Infrastructures.csproj
@@ -1,7 +1,7 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
@@ -11,15 +11,10 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Foodify.Infrastructures\Foodify.Infrastructures.csproj" />
+    <ProjectReference Include="..\Foodify.Domain\Foodify.Domain.csproj" />
   </ItemGroup>
 
 </Project>
