--- a/Foodify/Foodify.API/appsettings.json
+++ b/Foodify/Foodify.API/appsettings.json
@@ -1,10 +1,13 @@
 {
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "FoodifyDb": "Server=.; Database=Foodify; Integrated Security=True; MultipleActiveResultSets=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  },
-  "AllowedHosts": "*"
+  }
 }
