T2-add-api-key-filter Added api key filter, swager configured

--- a/Foodify/Foodify.API/appsettings.json
+++ b/Foodify/Foodify.API/appsettings.json
@@ -1,5 +1,6 @@
 {
   "AllowedHosts": "*",
+  "x-api-key": "ThisIsMyApiKey",
   "ConnectionStrings": {
     "FoodifyDb": "Server=.; Database=Foodify; Integrated Security=True; MultipleActiveResultSets=True"
   },
