T3-add-product-controller Added product controller

--- a/Foodify/Foodify.API/appsettings.json
+++ b/Foodify/Foodify.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "AllowedHosts": "*",
-  "x-api-key": "ThisIsMyApiKey",
+  "x-api-key": "key",
   "ConnectionStrings": {
     "FoodifyDb": "Server=.; Database=Foodify; Integrated Security=True; MultipleActiveResultSets=True"
   },
